Apply suggestion from @infomiho
Co-authored-by: Mihovil Ilakovac <mihovil@ilakovac.com>

--- a/opensaas-sh/blog/src/content/docs/guides/payments-integration.mdx
+++ b/opensaas-sh/blog/src/content/docs/guides/payments-integration.mdx
@@ -99,8 +99,8 @@ You can create a test customer in the [Stripe Dashboard](https://dashboard.strip
 
 - Click on the `Add a customer` button and fill in the relevant information for your test customer.
 
-Alternatively, Open SasS will automatically create a test customer the first time a user starts a checkout session. 
-This customer is linked to the email address associated with your app's user.
+Alternatively, Open SasS automatically creates a test customer the first time a user starts a checkout session. 
+This customer is linked to the email address associated with the user in your app.
 
 ### Set up the Customer Portal
 
