--- a/opensaas-sh/blog/src/content/docs/guides/payments-integration.mdx
+++ b/opensaas-sh/blog/src/content/docs/guides/payments-integration.mdx
@@ -107,7 +107,7 @@ This customer is linked to the email address associated with your app's user.
 You can set up your customer portal in your [Stripe Dashboard](https://dashboard.stripe.com/test/settings/billing/portal).
 
 By default, OpenSaas generates a unique customer portal link for each user on the back end.
-If you'd rather provide a permanent link to the customer portal, activate and copy the `Customer portal link`.
+If you'd rather provide a permanent link to the customer portal, activate it and copy the `portal link`.
 
 If you'd like to give users the ability to switch between different plans, e.g., upgrade from a "Hobby" to a "Pro" subscription, go down to the `Subscriptions` dropdown and select `customers can switch plans`. 
 
