--- a/opensaas-sh/blog/src/content/docs/guides/payments-integration.mdx
+++ b/opensaas-sh/blog/src/content/docs/guides/payments-integration.mdx
@@ -355,7 +355,7 @@ When you're ready to go live, change this to `false`.
 
 ### Get your Polar API Access Token
 
-Once you've created your account, you'll need to get your API access token. You can do that by navigating to the `Developers` section under your dashboard settings and creating a new personal access token.
+Once you've created your account, you'll need to get your API access token. You can do that by navigating to the `Developers` section under your dashboard settings and creating a new personal access token:
 
 - Click on the `New Token` button to create a new token
 - Give your token a name (e.g., "Open SaaS Development")
