--- a/opensaas-sh/blog/src/content/docs/guides/payments-integration.mdx
+++ b/opensaas-sh/blog/src/content/docs/guides/payments-integration.mdx
@@ -363,7 +363,7 @@ Once you've created your account, you'll need to get your API access token. You 
 
 ### Create Test Products
 
-To create test products in Polar, go to the `Products` section in your Polar dashboard.
+To create test products in Polar, go to the `Products` section in your Polar dashboard:
 
 - Click on the `New Product` button to create a new product
 - Fill in the product details:
