--- a/opensaas-sh/blog/src/content/docs/guides/payments-integration.mdx
+++ b/opensaas-sh/blog/src/content/docs/guides/payments-integration.mdx
@@ -407,7 +407,7 @@ https://89e5-2003-c7-153c-72a5-f837.ngrok-free.app/payments-webhook
 
 Next, configure the webhook in your Polar dashboard:
 
-- Go to `Webhooks` page under `Settings`
+- Go to `Settings > Webhooks` page.
 - Click `Add Endpoint` to create a new endpoint
 - In the URL field, paste your `ngrok` forwarding address with `/payments-webhook` appended (for example: `https://abc123.ngrok-free.app/payments-webhook`).
 - Set the `Format` to `"Raw"`
