--- a/opensaas-sh/blog/src/content/docs/guides/payments-integration.mdx
+++ b/opensaas-sh/blog/src/content/docs/guides/payments-integration.mdx
@@ -451,4 +451,4 @@ Polar uses Stripe's test card numbers for development. Check their [testing docu
 
 ## Deploying
 
-Once you deploy your app, you can follow the same steps, just make sure that you are no longer in test/sandbox mode within the Stripe, Lemon Squeezy, or Polar dashboards. After you've repeated the steps in live mode, add the new API keys and price/variant IDs to your environment variables in your deployed environment.
+Once you deploy your app, you can follow the same steps, just make sure that you are no longer in test/sandbox mode within the payment processor dashboard. After you've repeated the steps in live mode, add the new API keys and price/variant IDs to your environment variables in your deployed environment.
