--- a/opensaas-sh/blog/src/content/docs/guides/deploying.mdx
+++ b/opensaas-sh/blog/src/content/docs/guides/deploying.mdx
@@ -4,10 +4,10 @@ banner:
   content: |
     Have an Open SaaS app in production? <a href="https://e44cy1h4s0q.typeform.com/to/EPJCwsMi">We'll send you some swag! 👕</a>
 ---
-import { Image } from 'astro:assets';
-import npmVersion from '@assets/stripe/npm-version.png';
 import stripeListenEvents from '@assets/stripe/listen-to-stripe-events.png';
+import npmVersion from '@assets/stripe/npm-version.png';
 import stripeSigningSecret from '@assets/stripe/stripe-webhook-signing-secret.png';
+import { Image } from 'astro:assets';
 
 Because this SaaS app is a React/NodeJS/Postgres app built on top of [Wasp](https://wasp.sh), Open SaaS can take advantage of Wasp's easy, one-command deploy to Fly.io or manual deploy to any provider of your choice.
 
@@ -20,12 +20,12 @@ Or if you prefer to deploy to a different provider, or your frontend and backend
 
 These are the steps necessary for you to deploy your app. We recommend you follow these steps in order.
 
-- [ ] Get your [production API keys and environment variables](#prerequisites)
+- [ ] Get your [production API keys and environment variables](#prerequisites).
 - [ ] Deploy your app easily to [Fly.io](#deploying-to-flyio) or [manually](#deploying-manually--to-other-providers) to any provider.
-- [ ] Add the correct [redirect URL's to your social auth credentials](#adding-server-redirect-urls-to-social-auth)
-- [ ] Set up your [production webhooks for either [Stripe](#setting-up-your-production-stripe-webhook) or [Lemon Squeezy](#setting-up-your-production-lemon-squeezy-webhook)
-- [ ] Set your [production environment variables](#other-vars) on your deployed apps
-- [ ] (Optional) [Deploy your blog](#deploying-your-blog)
+- [ ] Add the correct [redirect URL's to your social auth credentials](#adding-server-redirect-urls-to-social-auth).
+- [ ] Set up your [production webhooks for either [Stripe](#setting-up-your-production-stripe-webhook) or [Lemon Squeezy](#setting-up-your-production-lemon-squeezy-webhook).
+- [ ] Set your [production environment variables](#other-vars) on your deployed apps.
+- [ ] (Optional) [Deploy your blog](#deploying-your-blog).
 
 Each of these steps is covered in more detail below.
 
@@ -152,75 +152,75 @@ To make sure your app is consistent with your Stripe account, here are some step
 
 1. You can find your `default` API version in the Stripe dashboard under the [Developers](https://dashboard.stripe.com/developers) section.
 2. Check that the API version in your `/src/payment/stripe/stripeClient.ts` file matches the default API version in your dashboard:
-```ts title="stripeClient.ts" {2}
-export const stripe = new Stripe(process.env.STRIPE_KEY!, {
-  apiVersion: 'YYYY-MM-DD', // e.g. 2023-08-16
-});
-```
+   ```ts title="stripeClient.ts" {2}
+   export const stripe = new Stripe(process.env.STRIPE_KEY!, {
+     apiVersion: 'YYYY-MM-DD', // e.g. 2023-08-16
+   });
+   ```
 3. If they don't match, you can upgrade/downgrade your Stripe NPM package in `package.json` to match the API version in your dashboard:
   - If your default version on the Stripe dashboard is also the latest version of the API, you can simply upgrade your Stripe NPM package to the latest version.
   - If your default version on the Stripe dashboard is not the latest version, and you don't want to [upgrade to the latest version](https://docs.stripe.com/upgrades#how-can-i-upgrade-my-api), because e.g. you have other projects that depend on the current version, you can find and install the Stripe NPM package version that matches your default API version by following these steps:
     - Find and note the date of your default API version in the [developer dashboard](https://dashboard.stripe.com/developers).
     - Go to the [Stripe NPM package](https://www.npmjs.com/package/stripe) page and hover over `Published` date column until you find the package release that matches your version. For example, here we find the NPM version that matches the default API version of `2023-08-16` in our dashboard, which is `13.x.x`.
-    <Image src={npmVersion} alt="npm version" loading="lazy" />
-    - Install the correct version of the Stripe NPM package by running, :
-    ```sh
-      npm install stripe@x.x.x # e.g. npm install stripe@13.11.0
-    ```
+      <Image src={npmVersion} alt="npm version" loading="lazy" />
+    - Install the correct version of the Stripe NPM package by running:
+      ```sh
+        npm install stripe@x.x.x # e.g. npm install stripe@13.11.0
+      ```
 4. **Test your app thoroughly** to make sure that the changes you made to your Stripe client are working as expected before deploying to production.
 
 
 #### Creating Your Production Webhook
-1. go to [https://dashboard.stripe.com/webhooks](https://dashboard.stripe.com/webhooks)
-2. click on `+ add endpoint`
-3. enter your endpoint url, which will be the url of your deployed server + `/payments-webhook`, e.g. `https://open-saas-wasp-sh-server.fly.dev/payments-webhook`
-<Image src={stripeListenEvents} alt="listen events" loading="lazy" />
-4. select the events you want to listen to. These should be the same events you're consuming in your webhook which are handled in [`src/payment/stripe/webhook.ts`](https://github.com/wasp-lang/open-saas/blob/main/template/app/src/payment/stripe/webhook.ts):
-<Image src={stripeSigningSecret} alt="signing secret" loading="lazy" />
-5. after that, go to the webhook you just created and `reveal` the new signing secret.
-6. add this secret to your deployed server's `STRIPE_WEBHOOK_SECRET=` environment variable. <br/>If you've deployed to Fly.io, you can do that easily with the following command:
-```sh
-wasp deploy fly cmd --context server secrets set STRIPE_WEBHOOK_SECRET=whsec_...
-```
+1. Go to [https://dashboard.stripe.com/webhooks](https://dashboard.stripe.com/webhooks)
+2. Click on `+ add endpoint`
+3. Enter your endpoint url, which will be the url of your deployed server + `/payments-webhook`, e.g. `https://open-saas-wasp-sh-server.fly.dev/payments-webhook`
+   <Image src={stripeListenEvents} alt="listen events" loading="lazy" />
+4. Select the events you want to listen to. These should be the same events you're consuming in your webhook which are handled in [`src/payment/stripe/webhook.ts`](https://github.com/wasp-lang/open-saas/blob/main/template/app/src/payment/stripe/webhook.ts):
+   <Image src={stripeSigningSecret} alt="signing secret" loading="lazy" />
+5. After that, go to the webhook you just created and `reveal` the new signing secret.
+6. Add this secret to your deployed server's `STRIPE_WEBHOOK_SECRET=` environment variable. If you've deployed to Fly.io, you can do that easily with the following command:
+   ```sh
+   wasp deploy fly cmd --context server secrets set STRIPE_WEBHOOK_SECRET=whsec_...
+   ```
 
 ### Setting up your Production Lemon Squeezy Webhook
 
 To set up your Lemon Squeezy webhook, you'll need the URL of you newly deployed server + `/payments-webhook`, e.g. `https://open-saas-wasp-sh-server.fly.dev/payments-webhook`. 
 
 With the webhook url ready, go to your [Lemon Squeezy Webhooks Dashboard](https://app.lemonsqueezy.com/settings/webhooks):
-- click the `+` button.
-- add the webhook forwarding url to the `Callback URL` section.
-- give your webhook a signing secret (a long, random string).
-- add this signing secret to your server's production environment variables under `LEMONSQUEEZY_WEBHOOK_SECRET=`
-- make sure to select at least the following updates to be sent:
-  - order_created
-  - subscription_created
-  - subscription_updated
-  - subscription_cancelled
-- click `save`
+- Click the `+` button.
+- Add the webhook forwarding url to the `Callback URL` section.
+- Give your webhook a signing secret (a long, random string).
+- Add this signing secret to your server's production environment variables under `LEMONSQUEEZY_WEBHOOK_SECRET=`.
+- Make sure to select at least the following updates to be sent:
+  - `order_created`
+  - `subscription_created`
+  - `subscription_updated`
+  - `subscription_cancelled`
+- Click `save`.
 
 ### Setting up your Production Polar Webhook
 
 To set up your Polar webhook, you'll need the URL of your newly deployed server + `/payments-webhook`, e.g. `https://open-saas-wasp-sh-server.fly.dev/payments-webhook`. 
 
 With the webhook URL ready, go to `Settings` > `Webhooks` in your [Polar Dashboard](https://polar.sh/dashboard):
-- click the `Add Endpoint` button.
-- paste the webhook forwarding URL in the `URL` field.
-- set the `Format` to `"Raw"`
-- select at least the following events to be sent:
+- Click the `Add Endpoint` button.
+- Paste the webhook forwarding URL in the `URL` field.
+- Set the `Format` to `"Raw"`.
+- Select at least the following events to be sent:
   - `order.paid`
   - `subscription.updated`
-- click `Save`
-- copy the generated webhook secret (a long, random string starting with `polar_whs_`).
-- add this signing secret to your server's production environment variables under `POLAR_WEBHOOK_SECRET=`
+- Click `Save`.
+- Copy the generated webhook secret (a long, random string starting with `polar_whs_`).
+- Add this signing secret to your server's production environment variables under `POLAR_WEBHOOK_SECRET=`.
 
 ## Deploying your Blog
 
 Deploying your Astro Starlight blog is a bit different than deploying your SaaS app. As an example, we will show you how to deploy your blog for free to Netlify. You will need a Netlify account and [Netlify CLI](https://docs.netlify.com/cli/get-started/) installed to follow these instructions.
 
-Make sure you are logged in with Netlify CLI. 
+Make sure you are logged in with Netlify CLI:
 - You can check if you are logged in with `netlify status`, 
-- you can log in with `netlify login`.
+- You can log in with `netlify login`.
 
 Position yourself in the `blog` directory and run the following command:
 
